--- a/akan.css
+++ b/akan.css
@@ -1,4 +1,15 @@
-.submitButton {
+submitButton{
 
-    margin:0 10px;
+    margin:0 20px;
+}
+body{
+    
+    background-image: url("akan-images/Akan.jpg");
+}
+
+.jumbotron {
+   
+    text-align: center  ;
+    background-color: fuchsia;
+    
 }
